=========================================================================
CHANGE LOG
=========================================================================

2011-12-16 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed object creation when merging two objects; thanks to James
	Davidson for pointing out the error

2011-12-06 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed get_mass
	
2011-12-05 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed create to reorder IDs when combining objects; thanks to James
	Davidson.

2011-12-05 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Cleaned up 'fitting.py' (untabified)

	* alignto updated; can now take a method for alignment

	* cealign updated; made faster and cleaner; thanks to Thomas
	Holder for the ideas and patch

2011-10-05 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Added the get_viewport function and updated the viewport function

2011-10-05 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Added support for some non-standard nucleic acids (PSU)

2011-09-29 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Fixed distance invalidation problem

2011-09-19 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Added Display > Roving Detail

	* Removed AttributeError on coloring volumes; needs better
	solution though

	* Added polar contacts/hydrogen bonds to the Measurement wizard

2011-09-19 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Doc fix

2011-09-16 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* PyMOL now respects the h_bond_from_proton setting

2011-09-08 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Added A > Generate > Selection > polar, non_polar,
	acceptor/donator options

2011-08-21 Jason Vertrees <Jason.Vertrees@schrodinger.com>

        * Fixed click-flash that happens when middle-clicking when
          showing the background gradient (thanks, Blaine)

        * Added A > Compute > Molecular Weight and cleaned up the